cmake_minimum_required(VERSION 3.17)
project(ELTE_3_Programozasi_nyelvek_C_)

set(CMAKE_CXX_STANDARD 14)

add_executable(ELTE_3_Programozasi_nyelvek_C_ 1_ora/1.cpp 1_ora/2.cpp 3.cpp 2_ora/1_hello.c 2_ora/1_hello.cpp 2_ora/2_namespace.cpp 2_ora/4.cpp 2_ora/5.cpp 2_ora/6.cpp 2_ora/01.cpp 2_ora/01.c 2_ora/02.cpp 2_ora/1_hello.cpp 3_ora/1_getchar.c 3_ora/2_equals.c 3_ora/3_equals.c 3_ora/4_precedencia.c 3_ora/5_precedencia.c 3_ora/6_postfix_prefix.c 3_ora/7_postfix_prefix.cpp "3_ora/8 cin.cpp" 3_ora/9_cin.cpp 3_ora/10_cin.cpp 4_ora/1_cin_upper.cpp 4_ora/2_cin_staticCast.cpp 4_ora/3_sizeof.cpp 4_ora/4_size_of.cpp 4_ora/5_size_better.cpp 4_ora/6_inc_pointer.cpp 4_ora/7_pointer_aritmetika.cpp 4_ora/8_pointer_aritmetika.cpp 4_ora/9_string_pointer.cpp 4_ora/10_pointer_aritmetika.cpp)